--- a/css/reset.css
+++ b/css/reset.css
@@ -90,7 +90,13 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  
 }
+
+* {
+  box-sizing: border-box;
+}
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -107,6 +113,7 @@ section {
 }
 body {
   line-height: 1;
+  overflow-x: hidden;
 }
 ol,
 ul {
@@ -126,4 +133,20 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+input, button {
+  border: none;
+  outline: none;
+  background: transparent;
+  box-sizing: border-box;
+}
+
+button {
+  cursor: pointer;
 }
